2004-10-09  Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/bootstrap.mk: updated BOOTSTRAPFILTEREDLISTADMIN to point
	to my address instead of Bernhard's

2004-08-30  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-regression): added hc08 to the regression
	tests

2004-02-22  Bernhard Held <bernhard AT bernhardheld.de>

	* sdcc-build/lib/variables.mk: fixed developername

2004-02-20  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/src-archive.mk: finally removed $HOSTNAME from archive name

2004-02-19  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk (generate-tarball): fixed `find` argument to
	`recode` both *.txt and *.TXT files

2004-02-11  Bernhard Held <bernhard AT bernhardheld.de>

	* sdcc-build-bootstrap.sh: added $EXTRATARGET to the list of
	make targets; it will be used for target archive-src-trees

2004-02-09  Bernhard Held <bernhard AT bernhardheld.de>

	* Makefile (build): removed finally archive-src-trees

2004-02-07  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/src-archive.mk: changed file name from sdcc.src-$(HOSTNAME) to
	sdcc-src-$(HOSTNAME)-$(BUILDDATE)
	* lib/bootstrap.mk (crontab-spawn): removed target archive-src-trees,
	from now on this will be done by only one host
	* support/readme-snapshot.txt: updated link to sdcc-doc

2004-01-21  Bernhard Held <bernhard AT bernhardheld.de>

	* local/ppc-osx2.cf.sourceforge.net.mk: added, SF keeps changing host names :-( 

2004-01-09  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/src-archive.mk: added HOSTNAME to src-archiv name

2003-10-28  Bernhard Held <bernhard AT bernhardheld.de>

	* local/x86-linux2.cf.sourceforge.net-i586-mingw32msvc.mk: added
	* local/x86-linux2.cf.sourceforge.net.mk: added
	* sdcc-build-bootstrap.sh: fixed typo "flitered"; BUILDROOT can now be defined in enviroment

2003-09-04  Bernhard Held <bernhard AT bernhardheld.de>

	* support/error-filter.sh: more tests need filter for integer overflow on host
